--- a/Phishing Website/frontend/index.html
+++ b/Phishing Website/frontend/index.html
@@ -51,7 +51,8 @@
     <!-- Footer Banner -->
     <footer class="maintenance-banner">
         <span class="maintenance-text">
-            ⚠️ This website is under active improvement, all features work normally.
+            ⚠️ This website is under active improvement, not working currently — will be online soon.
+
         </span>
     </footer>
 
